# vorpal

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  VORPAL-IMPLEMENTATION-PLAN.md  docker-compose.yml
.github/workflows/: ci.yml
docs/: architecture.md  getting-started.md
docs/api-reference/: README.md  audit.md  configuration.md  controls.md  policies.md  systems.md
docs/development/: README.md
docs/regulatory-packs/: README.md  eu-ai-act.md
docs/tutorials/: 01-registering-ai-system.md  02-creating-controls.md  03-writing-policies.md  README.md
vorpal-core/: Dockerfile  pyproject.toml
vorpal-core/src/vorpal/: __init__.py
vorpal-core/src/vorpal/core/: __init__.py  config.py  db.py
vorpal-core/src/vorpal/core/api/: __init__.py  app.py
vorpal-core/src/vorpal/core/api/routes/: audit.py  controls.py  health.py  policies.py  systems.py
vorpal-core/src/vorpal/core/api/schemas/: __init__.py  audit.py  common.py  control.py  policy.py  system.py
vorpal-core/src/vorpal/core/cli/: __init__.py  main.py
vorpal-core/src/vorpal/core/models/: __init__.py  audit.py  base.py  control.py  policy.py  system.py  user.py
vorpal-core/tests/: __init__.py  test_api.py
vorpal-sdk/: pyproject.toml
vorpal-sdk/src/vorpal/: __init__.py  client.py  types.py
vorpal-sdk/tests/: __init__.py  test_client.py
