[project]
name = "vorpal-sdk"
version = "0.1.0"
description = "Python SDK for Vorpal AI Governance Platform"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Alice in Wonderland AI", email = "team@vorpal.dev" }]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["ai", "governance", "sdk", "client"]

dependencies = [
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "respx>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/alice-in-wonderland-ai/vorpal"
Documentation = "https://vorpal.dev/docs"
Repository = "https://github.com/alice-in-wonderland-ai/vorpal"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vorpal"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
